<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/edit_Distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:inputType="number"
        android:hint="@string/distancia" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/total_de_quil_metros" />

    <EditText
        android:id="@+id/edit_Price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:inputType="numberDecimal"
        android:hint="@string/pre_o" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/pre_o_pro_litro" />

    <EditText
        android:id="@+id/edit_Autonomy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:inputType="numberDecimal"
        android:hint="@string/autonomia" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/kms_por_litro" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAllCaps="true"
        android:layout_marginTop="64dp"
        android:textSize="20sp"
        android:text="@string/seu_gasto_total_ser_de" />

    <TextView
        android:id="@+id/tex_TotalValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:textColor="@color/darkBlue"
        android:textSize="40sp"
        android:text="@string/valor_total" />
    <Button
        android:id="@+id/btn_calculate"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="28dp"
        android:textSize="20sp"
        android:backgroundTint="@color/lightGreen"
        android:textColor="@color/white"
        android:text="@string/calcular"/>

</LinearLayout>